[package]
name = "meshtastic-populator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = { version = "0.3.1", features = ["serde"] } # Has to be the same as sqlx
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
dotenvy = "0.15"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["chrono", "postgres", "runtime-tokio-rustls", "bigdecimal"] }
tera = "1"
tokio = { version = "1", features = ["full"] }
