[package]
name = "meshtastic-populator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = { version = "0.3.1", features = ["serde"] } # Has to be the same as sqlx
chrono = { version = "*", features = ["serde"] }
chrono-tz = "*"
dotenvy = "*"
once_cell = "*"
serde = { version = "*", features = ["derive"] }
sqlx = { version = "0.7", features = ["chrono", "postgres", "runtime-tokio-rustls", "bigdecimal"] }
tera = "*"
tokio = { version = "*", features = ["full"] }
